# rose

./: 0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  index.js  index_js.bootstrap.js
rose/: Cargo.toml
rose-wasm/: Cargo.toml
rose-wasm/src/: lib.rs
rose/src/: config.rs  geometry.rs  lib.rs  main.rs  seeds.rs  svg.rs  tiling.rs
src/: geometry.rs  main.rs  seeds.rs  svg.rs  tiling.rs
web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
