[package]
name = "rose-wasm"
version = "0.1.0"
authors = ["Bruno Andreotti <bandreotti@protonmail.com>"]
description = "A Penrose tiling generator"
license = "MIT"
repository = "https://github.com/bpandreotti/rose"
edition = "2018"

# See https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rose = { path = "../rose" }
wasm-bindgen = "0.2"
